app/assets/stylesheets/main.scss
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700,800);

* { font-family: 'Open Sans', sans-serif; }

h1, h2, h3, h4, h5, h6 { font-weight: 600; }

h4 {
  color: #666666;
  font-size: 22px;
}

h5 {
  color: #666666;
  font-size: 18px;
  line-height: 23px;
}

p {
  margin: 10px 0px 5px 0px;
  font-weight: 400;
  color: #666666;
}

body p {
  font-size: 16px;
  line-height: 23px;
  -webkit-font-smoothing: antialiased;
}

html, body { -webkit-overflow-scrolling: touch; }

a { color: #f27242; }
a:hover, a:focus { color:#e16a3e; }

.main-container { margin: 13px }
.padding-container { padding:0px 40px 40px 40px; }
.harm-reduction-box { margin: 20px 0px 20px 0px; }
.padding-space { padding:0px 30px 30px 0px; }

.footer {
  background: #f3f3f3;
  border-color: #337ab7;
  padding: 25px 0px 55px 0px;
  margin-top: 25px;
}

.label {
  font-size: 100%;
  line-height: 2;
}

.center {
  margin: auto;
  width: 80%;
}

@media (min-width: 768px) {
  .container {
    width:90%;
  }
}

